<resources>
    <!-- Надо придумать ко всему нормальные названия-->
    <string name="app_name">Глаз народа</string>
    <string name="map">Карта проблем</string>
    <string name="problems_list">Список проблем</string>
    <string name="my_problems">Мои проблемы</string>
    <string name="add_problem">Добавить проблему</string>
    <string name="profile">Ваш профиль</string>
    <string-array name="problems_item">
        <item>Дорожная</item>
        <item>Экологическая</item>
        <item>ЖКХ</item>
        <item>Другая</item>
    </string-array>
    <string name="title_activity_problems">ProblemsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Регистрация</string>
    <string name="make_register">Подтвердить регистрацию</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_name">Изменить имя</string>
    <string name="change_surname">Изменить фамилию</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="title_activity_entrance">EntranceActivity</string>
    <string name="auth">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="confirm">Подтвердить</string>
    <string name="current_password">Введите текущий пароль</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="view_password">Показать пароль</string>
    <string name="not_register">Ещё не зарегестрированы?</string>
    <string name="cancel">Отмена</string>

</resources>