<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/surnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/mailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editMail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/passwordAgainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPasswordAgain"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:onClick="enter"
            android:text="@string/make_register"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>