<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:id="@+id/layout"
    >

    <LinearLayout
        android:id="@+id/app"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Имя пользователя"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_marginTop="100dp"
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_profile" />

                <TextView
                    android:textColor="#000000"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/add_problem_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />

                <TextView
                    android:textColor="#000000"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_problem"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/map_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_map_24" />

                <TextView
                    android:textColor="#000000"

                    android:id="@+id/map_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_problem_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_format_list_numbered_24" />

                <TextView
                    android:textColor="#000000"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_problems"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/problem_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_baseline_assignment_late_24" />

                <TextView
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problems_list"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>